@@ -4,18 +4,18 @@ import com.shopsavvy.shopshavvy.exception.InvalidTokenException;
 import com.shopsavvy.shopshavvy.exception.TokenExpiredException;
 import com.shopsavvy.shopshavvy.exception.TokenNotFoundException;
 import com.shopsavvy.shopshavvy.exception.UserNotFoundException;
+import com.shopsavvy.shopshavvy.model.token.AuthToken;
 import com.shopsavvy.shopshavvy.model.users.User;
 import com.shopsavvy.shopshavvy.repository.BlackListedTokenRepository;
 import com.shopsavvy.shopshavvy.repository.AuthTokenRepository;
 import com.shopsavvy.shopshavvy.repository.UserRepository;
-import com.shopsavvy.shopshavvy.security.configurations.UserDetailsImpl;
+import com.shopsavvy.shopshavvy.configuration.UserDetailsImpl;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
 import jakarta.mail.MessagingException;
 import lombok.RequiredArgsConstructor;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
@@ -30,10 +30,10 @@ import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class JwtService {
     @Value("${security.jwt.secret-key}")
     private String secretKey;
@@ -53,10 +53,9 @@ public class JwtService {
     private final AuthTokenRepository authTokenRepository;
     private final BlackListedTokenRepository blackListedTokenRepository;
     private final UserRepository userRepository;
-    private final EmailService emailService;
-    private final UserDetailsServiceImpl userDetailsServiceImpl;
-    private final Logger logger= LoggerFactory.getLogger(JwtService.class);
     private final MessageSource messageSource;
+    private final UserDetailsServiceImpl userDetailsServiceImpl;
+    private final EmailService emailService;
 
     private Locale getCurrentLocale() {
         return LocaleContextHolder.getLocale();
@@ -76,32 +75,20 @@ public class JwtService {
         Map<String, Object> claims = new HashMap<>();
         claims.put("roles", userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList()));
+                .toList());
         return generateToken(claims, userDetails, tokenType);
     }
 
 
     public String generateToken(Map<String, Object> extraClaims, UserDetails userDetails, String tokenType) {
-        long expirationTime;
-        switch (tokenType) {
-            case "refresh":
-                expirationTime = refreshTokenExpirationTime;
-                break;
-            case "activation":
-                expirationTime = activateTokenExpirationTime;
-                break;
-            case "access":
-                expirationTime = accessTokenExpirationTime;
-                break;
-            default:
-                expirationTime = resetPasswordTokenTime;
-                break;
-
-        }
+        long expirationTime = switch (tokenType) {
+            case "refresh" -> refreshTokenExpirationTime;
+            case "activation" -> activateTokenExpirationTime;
+            case "access" -> accessTokenExpirationTime;
+            default -> resetPasswordTokenTime;
+        };
         return buildToken(extraClaims, userDetails, expirationTime, tokenType);
     }
-
-
 
     private String buildToken(
             Map<String, Object> extraClaims,
@@ -139,9 +126,12 @@ public class JwtService {
                 User user = userRepository.findByEmail(username)
                         .orElseThrow(() -> new UserNotFoundException(
                                 messageSource.getMessage("error.user.not.found", null, getCurrentLocale())));
-                authTokenRepository.deleteByToken(token);
-                sendActivationLinkIfTokenIsExpired(username);
+                try {
 
+                    replaceExpiredActivationToken(token, username);
+                } catch (Exception e) {
+                    log.error("Failed to replace activation token", e);
+                }
                 throw new TokenExpiredException(
                         messageSource.getMessage("error.token.activation.expired", null, getCurrentLocale()));
             }
@@ -152,8 +142,7 @@ public class JwtService {
 
         boolean tokenExists;
         switch (tokenType) {
-            case "activation":
-            case "reset_password":
+            case "activation", "reset_password":
                 tokenExists = authTokenRepository.existsByToken(token);
                 if (!tokenExists) {
                     throw new TokenNotFoundException(
@@ -207,10 +196,24 @@ public class JwtService {
         return Keys.hmacShaKeyFor(keyBytes);
     }
 
-    public void sendActivationLinkIfTokenIsExpired(String email) throws MessagingException {
+
+    public void replaceExpiredActivationToken(String token, String email) throws MessagingException {
+        authTokenRepository.deleteByToken(token);
+
         UserDetailsImpl userDetailsImpl = userDetailsServiceImpl.loadUserByUsername(email);
         String newActivationToken = generateToken(userDetailsImpl, "activation");
-        emailService.sendActivationLink(email, newActivationToken);
+        Claims claims = extractAllClaims(newActivationToken);
+        AuthToken authToken = AuthToken.builder()
+                .token(newActivationToken)
+                .tokenType("activation")
+                .expirationTime(claims.getExpiration())
+                .userEmail(email)
+                .build();
+        authToken = authTokenRepository.save(authToken);
 
+        log.info("New activation token saved with ID: {}", authToken.getId());
+
+        emailService.sendActivationLink(email, newActivationToken);
     }
+
 }
